# HydroFlows

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  README.rst  environment.yml  make_env.py  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bugs.yaml  config.yml  documentation.yaml  feature_request.yaml
.github/workflows/: docs.yml  run_examples.yml  tests_pip.yml  tests_pixi.yml  update-lockfile.yml
HydroFlows/: __init__.py  log.py
HydroFlows/cli/: __init__.py  main.py
HydroFlows/rules/: __init__.py  rule.py
HydroFlows/rules/sfincs/: sfincs_build.py
HydroFlows/rules/wflow/: wflow_build.py
HydroFlows/templates/: __init__.py  folder_structure.py
HydroFlows/utils/: __init__.py
cases/: README.rst
cases/Rio/: create_workflow.py  create_workflow_for_design_events.py  create_workflow_global_data.py  global-workflow-risk-climate.py  global-workflow-risk.py  global-workflow.py  local-workflow-risk-climate-strategies-test.py  local-workflow-risk-climate-strategies.py  local-workflow-risk.py  local-workflow-validation.py  local-workflow.py  rio_hazard_validation.ipynb  rio_risk_climate_strategies.ipynb  rio_risk_climate_with_global_data.ipynb
cases/Rio/hydromt_config/: fiat_build_local.yml  fiat_build_local_v2.yml  sfincs_build_global.yaml  sfincs_build_local.yaml
cases/Rio/scripts/: clip_exposure.py  get_bathymetry.py  global_vs_local_design_events.py  plot_global_vs_local_design_events.py  prepare_exposure_files.py  preprocess_exposure.py  preprocess_local_precip.py  run_hydromtfiat_global_rio.py  run_hydromtfiat_rio.py
cases/lagos/: create_workflow.py
cases/livenza/: create_workflow.py
docs/: _quarto.yml  api.py  api.rst  changelog.qmd  conf.py  index.qmd  index.rst  links.rst  run_notebooks.py
docs/api/: catalog_methods.rst  climate_methods.rst  coastal_methods.rst  discharge_methods.rst  event_api.rst  events.rst  fiat_methods.rst  flood_adapt_methods.rst  hazard_methods.rst  hazard_validation_methods.rst  historical_events_methods.rst  index.rst  methods_api.rst  rainfall_methods.rst  raster_methods.rst  rule.rst  script_methods.rst  sfincs_methods.rst  wflow_methods.rst  workflow_api.rst  workflow_methods.rst
docs/cases/: intro.rst  rio_case.rst
docs/dev_guide/: intro.rst
docs/developments/: guide.qmd  index.qmd
docs/getting_started/: intro.rst
docs/setup_guide/: intro.rst
docs/user_guide/: api.rst  cli.rst  create.rst  intro.rst  method.rst  read_workflow.py  setup_workflow.py
examples/: README.rst  artifact_fetch.py  climate_discharge.ipynb  climate_discharge.py  coastal_events.ipynb  coastal_events.py  coastal_risk.ipynb  fa_test.py  fetch_data.py  fluvial_hazard.ipynb  fluvial_hazard.py  fluvial_risk.ipynb  make_dag.bat  pluvial_fluvial_risk.ipynb  pluvial_fluvial_risk.py  pluvial_hazard.ipynb  pluvial_hazard.py  pluvial_hazard_cwl.py  pluvial_hazard_multiple_regions.py  pluvial_multiple_regions.ipynb  pluvial_multiple_regions.py  pluvial_risk copy.py  pluvial_risk.ipynb  pluvial_risk.py  pluvial_risk_fiat_visualize.py  readme.md  run_snake.bat  sfincs_pluvial.config.yml  sfincs_pluvial.smk  sfincs_pluvial.yml  sfincs_pluvial_regions.config.yml  sfincs_pluvial_regions.smk  sfincs_pluvial_regions.yml  test_fa.py  test_workflow.py  test_workflow_py.py  workflow_py.py  workflow_yml.py
examples/hydromt_config/: fiat_config.yml  sfincs_config.yml
hydroflows/: __init__.py  _typing.py  config.py  events.py  io.py  log.py  method.py  reference.py  rule.py  workflow.py
hydroflows/cfg/: __init__.py  config_charts.yml  config_risk_charts.toml  config_risk_charts.yml  fa_database_build.yml  fiat_build.yml  infographic_metrics_config.toml  infographic_metrics_config_risk.toml  metrics_config.yml  metrics_config_risk.toml  metrics_config_risk.yml  sfincs_build.yml  wflow_build.yml
hydroflows/cli/: __init__.py  main.py
hydroflows/methods/: __init__.py  _validators.py  events.py  hazard_catalog.py  method.py  method_parameters.py
hydroflows/rules/: __init__.py  rule.py
hydroflows/templates/: README.md  __init__.py  _jinja_snake_rule.py  fiat_build.yaml  fiat_build.yml  folder_structure.py  jinja_cwl_rule.py  jinja_filters.py  jinja_rule.py  jinja_snake_rule.py  macros.cwl.jinja  rule.cwl.jinja  rule.smk.jinja  run_method_snake.py  sfincs_build.yaml  wflow_build.yaml  workflow.cwl.jinja  workflow.smk.jinja
hydroflows/utils/: __init__.py  cwl_utils.py  docker_utils.py  example_data.py  folder_structure.py  misc.py  parsers.py  path_utils.py  registry.json
hydroflows/workflow/: __init__.py  method.py  method_entrypoints.py  method_parameters.py  reference.py  rule.py  rules.py  wildcards.py  workflow.py  workflow_config.py
hydroflows/workflows/: __init__.py  events.py  setup_models.smk  setup_models_config.yml  workflow.py
tests/: conftest.py  test_cli.py  test_events.py  test_fiat.py  test_io.py  test_typing.py
tests/_data/: event_rp010.yml  event_rp050.yml  events.yml  p_rp010.csv  p_rp050.csv  rainfall_rp050.csv  region.geojson  rio_region.geojson
tests/_large_data/: README.md  fetch_large_data.py  make_registry.py
tests/_remote_data/: README.md  registry.txt
tests/cli/: conftest.py  test_cli.py
tests/data/: events.yml
tests/methods/: conftest.py  test__methods.py  test_all_methods.py  test_catalog_methods.py  test_climate_methods.py  test_coastal_methods.py  test_discharge_methods.py  test_entrypoints.py  test_fiat.py  test_fiat_methods.py  test_floodadapt_methods.py  test_hazard_catalog.py  test_hazard_validation_methods.py  test_historical_event_methods.py  test_rainfall_methods.py  test_raster_methods.py  test_script_methods.py  test_sfincs_methods.py  test_validation_methods.py  test_validator.py  test_wflow_methods.py  test_wflow_rules.py
tests/rules/: test_rule.py  test_sfincs_rules.py  test_wflow_rules.py
tests/utils/: test_io.py  test_misc.py  test_parsers.py  test_path_utils.py
tests/workflow/: conftest.py  mock_methods.py  test_entrypoints.py  test_events.py  test_method.py  test_reference.py  test_rule.py  test_rules.py  test_wildcards.py  test_workflow.py
(+186 files in other folders)
